--- a/package.json
+++ b/package.json
@@ -44,5 +44,9 @@
     "react-day-picker": "^7.2.4",
     "react-helmet": "^5.2.0",
     "underscore": "^1.9.1"
+  },
+  "resolutions": {
+    "react": "16.0.0",
+    "react-dom": "16.0.0"
   }
 }
