--- a/package.json
+++ b/package.json
@@ -34,19 +34,31 @@
   "dependencies": {
     "d3": "^5.7.0",
     "echarts": "^4.2.0-rc.2",
+    "echarts-for-react": "^2.0.15-beta.0",
     "echarts-gl": "^1.1.1",
     "elasticsearch": "^15.2.0",
     "elasticsearch-browser": "^15.2.0",
     "jquery": "^3.3.1",
     "moment": "^2.23.0",
+    "react": "16.3.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-d3-library": "^1.1.8",
     "react-datepicker": "^2.0.0",
     "react-day-picker": "^7.2.4",
+    "react-dom": "16.0.0",
     "react-helmet": "^5.2.0",
+    "react-load-script": "^0.0.6",
+    "react-particles-js": "^2.6.0",
+    "react-redux": "^7.0.2",
+    "react-sky": "^1.1.0",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "three": "^0.104.0",
     "underscore": "^1.9.1"
   },
   "resolutions": {
-    "react": "16.0.0",
-    "react-dom": "16.0.0"
+    "react": "16.3.1",
+    "react-dom": "16.3.1"
   }
 }
